--- a/.github/workflows/IPQ60XX.yml
+++ b/.github/workflows/IPQ60XX.yml
@@ -6,7 +6,7 @@
 # Blog: https://p3terx.com
 #=================================================
 
-name: Repo Dispatcher
+name: IPQ60XX
 
 on: 
   # push: 
