--- a/.github/workflows/IPQ60XX.yml
+++ b/.github/workflows/IPQ60XX.yml
@@ -22,7 +22,7 @@ on:
         default: ''
 
 env:
-  USHTAR_TOKEN: ${{ secrets.USHTAR_TOKEN }}
+  TH_TOKEN: ${{ secrets.TH_TOKEN }}
   TZ: Asia/Shanghai
 
 jobs:
@@ -37,7 +37,7 @@ jobs:
       if: contains(github.event.inputs.param, 'cw')
       with:
         workflow_id: all
-        access_token: ${{ secrets.USHTAR_TOKEN }}
+        access_token: ${{ secrets.TH_TOKEN }}
 
     - name: Load Settings.ini
       run: |
@@ -50,13 +50,13 @@ jobs:
 
     - name: Trigger Packages Update
       run: |
-        gitdate=$(curl -H "Authorization: token ${{ secrets.USHTAR_TOKEN }}" -s "https://api.github.com/repos/ushtar/kwrt-packages/actions/runs" | jq -r '.workflow_runs[0].created_at')
+        gitdate=$(curl -H "Authorization: token ${{ secrets.TH_TOKEN }}" -s "https://api.github.com/repos/ushtar/kwrt-packages/actions/runs" | jq -r '.workflow_runs[0].created_at')
         gitdate=$(date -d "$gitdate" +%s)
         now=$(date -d "$(date)" +%s)
         if [[ $(expr $gitdate + 120) < $now ]]; then
         curl -X POST https://api.github.com/repos/ushtar/kwrt-packages/dispatches \
         -H "Accept: application/vnd.github.everest-preview+json" \
-        -H "Authorization: token ${{ secrets.USHTAR_TOKEN }}" \
+        -H "Authorization: token ${{ secrets.TH_TOKEN }}" \
         --data '{"event_type": "update"}'
         fi
 
@@ -66,6 +66,6 @@ jobs:
           curl \
           -X POST https://api.github.com/repos/${{ github.repository }}/dispatches \
           -H "Accept: application/vnd.github.everest-preview+json" \
-          -H "Authorization: token ${{ secrets.USHTAR_TOKEN }}" \
+          -H "Authorization: token ${{ secrets.TH_TOKEN }}" \
           -d '{"event_type": "qualcommax_ipq60xx ${{ github.event.inputs.param }}", "client_payload": {"target": "qualcommax_ipq60xx"}}'
      
